# voskros

./: CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.cfg  setup.py
config/: prompter.yaml
launch/: voskros.launch.yaml
scripts/: prompter  set_grammar.sh  vosk
srv/: SetGrammar.srv
test/: test_copyright.py
voskros/: voskros.py
